--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Historical Events Finder</title>
 </head>
 <body>
     <div id="app"></div>
+    <div id="react-paginate"></div>
     <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
